[gd_scene load_steps=25 format=3 uid="uid://dne2jh510btov"]

[ext_resource type="Script" path="res://Towers/Wind/wind_tower.gd" id="1_ogwst"]
[ext_resource type="Texture2D" uid="uid://dc1mkg2qy6jdw" path="res://Assets/Sprites/Towers/towerDefense_tile249.png" id="2_bmdcc"]
[ext_resource type="FontFile" uid="uid://cgdbdkkr85xtx" path="res://Assets/Fonts/kenvector_future_thin.ttf" id="3_ue80q"]
[ext_resource type="Texture2D" uid="uid://coftt6ew8iqsj" path="res://Assets/Ui/Art/sword.png" id="4_5t6s0"]
[ext_resource type="Script" path="res://Singletons/AttackTBar.gd" id="4_8qxvh"]
[ext_resource type="Script" path="res://Towers/Wind/TowerRangePreview.gd" id="4_cx5wa"]
[ext_resource type="Texture2D" uid="uid://bh8lxb1pyhkc1" path="res://Assets/Ui/Art/bin.png" id="5_pu6oq"]
[ext_resource type="Texture2D" uid="uid://d0vcelp6hhj2q" path="res://Assets/Ui/Art/range.png" id="6_hmxfn"]
[ext_resource type="Script" path="res://Mobs/Adds/HealthBar.gd" id="7_e1cul"]
[ext_resource type="Texture2D" uid="uid://b1q2lof3finbc" path="res://Assets/Ui/Art/bow.png" id="7_tdy0o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2unwm"]
resource_local_to_scene = true
radius = 200.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbufd"]
bg_color = Color(0.986525, 0.338473, 0.510245, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkbed"]
bg_color = Color(0.72453, 0.356289, 0.930381, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ro21e"]
size = Vector2(5.93971, 5.57547)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8710"]
size = Vector2(56, 23.0769)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nci8i"]
bg_color = Color(0.384699, 0.69689, 0.351437, 0.45098)
border_width_left = 1
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.827451)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_334qq"]
bg_color = Color(0.243137, 0.470588, 0.694118, 0.537255)
border_width_left = 1
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.819608, 0.360784, 0.0823529, 0.8)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xy6tr"]
bg_color = Color(0.745098, 0.133333, 0.0980392, 0.827451)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.596936, 0.0421845, 0.0425374, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqvr"]
bg_color = Color(0.92756, 0.204587, 0.156606, 0.827451)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.596078, 0.0431373, 0.0431373, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_monho"]
bg_color = Color(0.544719, 0.0832642, 0.0573227, 0.827451)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.596078, 0.0431373, 0.0431373, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2niu2"]
bg_color = Color(0.0285469, 0.250721, 0.47662, 0.580392)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0363896, 0.430395, 0.597016, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n770"]
bg_color = Color(0.390165, 0.701667, 0.991515, 0.894118)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0352941, 0.431373, 0.596078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5rfm"]
bg_color = Color(0.772549, 0.105882, 0.247059, 0.780392)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65itl"]
bg_color = Color(0.283263, 0.884305, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="WindTower" type="StaticBody2D"]
light_mask = 2
visibility_layer = 3
collision_layer = 2
collision_mask = 2
input_pickable = true
script = ExtResource("1_ogwst")

[node name="TowerDefenseTile250" type="Sprite2D" parent="."]
light_mask = 2
visibility_layer = 2
rotation = 1.5708
texture = ExtResource("2_bmdcc")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(31, 0)

[node name="Tower" type="Area2D" parent="."]
collision_layer = 0

[node name="Collision" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_2unwm")

[node name="Area" type="Panel" parent="Tower"]
modulate = Color(0.72549, 0, 0, 0.403922)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(195, 195)
theme_override_styles/panel = SubResource("StyleBoxFlat_dbufd")
script = ExtResource("4_cx5wa")

[node name="AreaUpgraded" type="Panel" parent="Tower"]
visible = false
modulate = Color(0.516072, 0.169633, 0.728865, 0.521569)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
pivot_offset = Vector2(192, 192)
theme_override_styles/panel = SubResource("StyleBoxFlat_xkbed")
script = ExtResource("4_cx5wa")

[node name="TowerDetection" type="Area2D" parent="."]
process_mode = 3
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerDetection"]
position = Vector2(-0.249997, -1.43051e-06)
scale = Vector2(13.3009, -12.9137)
shape = SubResource("RectangleShape2D_ro21e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 2.08)
shape = SubResource("RectangleShape2D_j8710")

[node name="BulletContainer" type="Node" parent="."]

[node name="UpgradeNode" type="Node" parent="."]

[node name="Panel" type="Panel" parent="UpgradeNode"]
visible = false
offset_left = 8.0
offset_top = 99.0
offset_right = 48.0
offset_bottom = 139.0
scale = Vector2(5, -3.524)
pivot_offset = Vector2(26.7416, 22.852)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_nci8i")

[node name="HBox" type="HBoxContainer" parent="UpgradeNode/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.625
offset_top = -13.2263
offset_right = 24.375
offset_bottom = 26.7737
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.790851, 0.406084)
pivot_offset = Vector2(21.8789, 20.3065)

[node name="Upgrade1" type="Button" parent="UpgradeNode/Panel/HBox"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_334qq")

[node name="n" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade1"]
layout_mode = 0
offset_left = 3.2
offset_top = 39.0
offset_right = 73.2
offset_bottom = 62.0
scale = Vector2(0.09, -0.3)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ue80q")
text = "Damage"

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade1"]
position = Vector2(6, 20)
rotation = -4.90438
scale = Vector2(0.028, 0.021)
texture = ExtResource("4_5t6s0")

[node name="p" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade1"]
layout_mode = 0
offset_left = 4.58715
offset_top = 9.80733
offset_right = 22.5871
offset_bottom = 27.8073
scale = Vector2(0.185449, -0.556406)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ue80q")
theme_override_font_sizes/font_size = 15
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D2" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade1"]
position = Vector2(6, 20)
rotation = 1.74533
scale = Vector2(0.028, 0.021)
texture = ExtResource("4_5t6s0")

[node name="Upgrade2" type="Button" parent="UpgradeNode/Panel/HBox"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_334qq")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade2"]
position = Vector2(5.80225, 18.875)
rotation = 3.14159
scale = Vector2(0.0154937, 0.0460799)
texture = ExtResource("6_hmxfn")

[node name="p" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade2"]
layout_mode = 0
offset_left = 4.52257
offset_top = 9.55852
offset_right = 22.5226
offset_bottom = 27.5585
scale = Vector2(0.185449, -0.556406)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ue80q")
theme_override_font_sizes/font_size = 15
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="n" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade2"]
layout_mode = 0
offset_left = 3.52622
offset_top = 39.1402
offset_right = 60.5262
offset_bottom = 62.1402
scale = Vector2(0.09, -0.3)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ue80q")
text = "Range"

[node name="Upgrade3" type="Button" parent="UpgradeNode/Panel/HBox"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_334qq")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Upgrade3"]
position = Vector2(5.6001, 21.1631)
rotation = -0.174533
scale = Vector2(0.005, -0.005)
texture = ExtResource("7_tdy0o")

[node name="p" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade3"]
layout_mode = 0
offset_left = 4.75191
offset_top = 11.0515
offset_right = 22.7519
offset_bottom = 29.0515
scale = Vector2(0.192332, -0.571021)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ue80q")
theme_override_font_sizes/font_size = 15
text = "4
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="n" type="Label" parent="UpgradeNode/Panel/HBox/Upgrade3"]
layout_mode = 0
offset_left = 2.44686
offset_top = 39.1402
offset_right = 89.4469
offset_bottom = 65.1402
scale = Vector2(0.09, -0.3)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ue80q")
text = "Fire Rate"

[node name="Special" type="HBoxContainer" parent="UpgradeNode/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.25
offset_top = -30.0
offset_right = 4.75
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.790851, 0.406084)
pivot_offset = Vector2(21.8789, 20.3065)

[node name="Scrap" type="Button" parent="UpgradeNode/Panel/Special"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_xy6tr")
theme_override_styles/hover = SubResource("StyleBoxFlat_bqqvr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_monho")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/Special/Scrap"]
position = Vector2(5.98584, 21.5685)
rotation = 3.14159
scale = Vector2(0.0139649, 0.0460245)
texture = ExtResource("5_pu6oq")

[node name="p" type="Label" parent="UpgradeNode/Panel/Special/Scrap"]
layout_mode = 0
offset_left = 4.6372
offset_top = 11.2658
offset_right = 22.6372
offset_bottom = 29.2658
scale = Vector2(0.185449, -0.556406)
theme_override_colors/font_color = Color(0.740092, 0.81577, 0.9412, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ue80q")
theme_override_font_sizes/font_size = 15
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerNode" type="Node" parent="."]

[node name="AttackTimer" type="ProgressBar" parent="TimerNode"]
visible = false
offset_left = -25.0
offset_top = 30.0
offset_right = 25.0
offset_bottom = 35.0
pivot_offset = Vector2(26, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_2niu2")
theme_override_styles/fill = SubResource("StyleBoxFlat_2n770")
value = 50.0
show_percentage = false
script = ExtResource("4_8qxvh")

[node name="Timer" type="Timer" parent="TimerNode/AttackTimer"]

[node name="regenTimer" type="Timer" parent="TimerNode"]
wait_time = 0.5
autostart = true

[node name="HealthComponent" type="Node" parent="."]

[node name="healthBar" type="ProgressBar" parent="HealthComponent"]
offset_left = -26.0
offset_top = -49.0
offset_right = 24.0
offset_bottom = -45.0
pivot_offset = Vector2(26, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_r5rfm")
theme_override_styles/fill = SubResource("StyleBoxFlat_65itl")
value = 100.0
show_percentage = false
script = ExtResource("7_e1cul")

[connection signal="input_event" from="." to="." method="_click_tower"]
[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="pressed" from="UpgradeNode/Panel/HBox/Upgrade1" to="." method="_on_upgrade_1_pressed" binds= ["\"UpgradeNode/Panel/HBox/Upgrade1/p\""]]
[connection signal="mouse_entered" from="UpgradeNode/Panel/HBox/Upgrade2" to="." method="_on_upgrade_2_mouse_entered"]
[connection signal="mouse_exited" from="UpgradeNode/Panel/HBox/Upgrade2" to="." method="_on_upgrade_2_mouse_exited"]
[connection signal="pressed" from="UpgradeNode/Panel/HBox/Upgrade2" to="." method="_on_upgrade_2_pressed" binds= ["\"UpgradeNode/Panel/HBox/Upgrade2/p\""]]
[connection signal="pressed" from="UpgradeNode/Panel/HBox/Upgrade3" to="." method="_on_upgrade_3_pressed" binds= ["\"UpgradeNode/Panel/HBox/Upgrade3/p\""]]
[connection signal="pressed" from="UpgradeNode/Panel/Special/Scrap" to="." method="scrap"]
[connection signal="timeout" from="TimerNode/AttackTimer/Timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="TimerNode/regenTimer" to="." method="_on_regen_timer_timeout"]
